examples/invalid/error_sintactico_01.chs
nimais main() {
    cabal edad = 20

    simon (edad > 18 {
        chotear("Sos mayor de edad")
    } chapus {
        chotear("Sos menor de edad")
    }
}